--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -14,6 +14,10 @@
       <input type="password" name="password" placeholder="********" />
     </label>
 
+    <label>Image
+      <input type="text" name="image" placeholder="image URL">
+    </label>
+
     <button type="submit">Create account</button>
 
     {{!-- error message will be added here --}}
