--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -1,6 +1,11 @@
 {{#if user}}
     <h2>Welcome, {{ user.username }}!</h2>
     <p>This is your profile page my friend! And your email is: {{ user.email }}</p>
+    <a href="/post">POST</a>
+    <img src={{user.imgUrl}} alt="user avatar" width="250" height="250"/>
+
+
+    
 {{else}}
     <p>Still no logged in user, sorry!</p>
 {{/if}}
